[oauth2]: updated gradle files fixed controllers
